# ChordMatrix

./: CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Data/: StepData.h
Source/Engine/: MidiExport.cpp  MidiExport.h  MusicTheory.cpp  MusicTheory.h  ProgressionEngine.cpp  ProgressionEngine.h  VoicingEngine.cpp  VoicingEngine.h
Source/GUI/: HeaderComponent.cpp  HeaderComponent.h  InspectorComponent.cpp  InspectorComponent.h  MatrixGridComponent.cpp  MatrixGridComponent.h  PluginEditor.cpp  PluginEditor.h  ProgressionBrowserComponent.cpp  ProgressionBrowserComponent.h  SuggestionPanelComponent.cpp  SuggestionPanelComponent.h
